--- a/python_classes_and_methods.ipynb
+++ b/python_classes_and_methods.ipynb
@@ -56,6 +56,7 @@
    "source": [
     "# class method\n",
     "# >> doesn't require instance, sends class as first argument\n",
+    "# >> using cls instead of self (convention)\n",
     "\n",
     "\n",
     "class Foo(object):\n",
@@ -445,22 +446,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ClassPizza.get_radius is ClassPizza().get_radius"
+    "ClassPizza.get_radius == ClassPizza().get_radius"
    ]
   },
   {
@@ -481,6 +482,187 @@
    ],
    "source": [
     "ClassPizza.get_radius()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### classes without instances\n",
+    "\n",
+    "class methods are mostly useful for two kinds of methods:\n",
+    "\n",
+    "1. Factory methods (used to create an instance for a class)\n",
+    "    > @classmethod\n",
+    "\n",
+    "2. Static methods (can be split in static methods)\n",
+    "    > @staticmethod"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Pizza(object):\n",
+    "    def __init__(self, radius, height):\n",
+    "        self.radius = radius\n",
+    "        self.height = height\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def compute_area(radius):\n",
+    "        return math.pi * (radius ** 2)\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def compute_volume(cls, height, radius):\n",
+    "        return height * cls.compute_area(radius)\n",
+    "    \n",
+    "    def get_volume(self):\n",
+    "        return self.compute_volume(self.height, self.radius)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Abstract methods\n",
+    "\n",
+    "- defined in base class\n",
+    "- may not provide any implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class AbstractPizza(object):\n",
+    "    def get_radius(self):\n",
+    "        raise NotImplementedError"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Any class inheriting from `AbstractPizza` should implement and override the `get_radius` method, otherwise an exception would be raised."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.AbstractPizza at 0x103f235c0>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# No error because abstract method is not called\n",
+    "AbstractPizza()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NotImplementedError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-8f1205ca1bbd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# raises NotImplementedError\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mAbstractPizza\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_radius\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-12-3d7454e0303c>\u001b[0m in \u001b[0;36mget_radius\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0mAbstractPizza\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobject\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mget_radius\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNotImplementedError\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "# raises NotImplementedError\n",
+    "AbstractPizza().get_radius()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Alternative to get sure a method will be overwritten:\n",
+    "\n",
+    "Using `abc` module provided by Python – You get the error as soon as you'll try to instanciate the class. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import abc\n",
+    " \n",
+    "class BasePizza(object):\n",
+    "    __metaclass__ = abc.ABCMeta\n",
+    " \n",
+    "    @abc.abstractmethod\n",
+    "    def get_radius(self):\n",
+    "         \"\"\"Method that should do something.\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.BasePizza at 0x103f5a550>"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# should raise an error without function beeing called\n",
+    "\n",
+    "BasePizza()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mixing static, class and abstract methods\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import abc\n",
+    "\n"
    ]
   },
   {
