cleaned up the introduction

--- a/python_classes_and_methods.ipynb
+++ b/python_classes_and_methods.ipynb
@@ -4,24 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## classes and methods in python\n",
+    "# classes and methods in python\n",
     "\n",
     "\n",
     "### self & cls\n",
     "\n",
     "- positional arguments\n",
-    "- expected by python instance methods & class methods\n",
+    "- self = expected by instance methods (placeholder for the current object instance)\n",
+    "- cls = expected by class methods (points to the class itself)\n",
+    "- using self & cls is a convention, but not nessesary\n",
     "\n",
-    "### categories of methods\n",
+    "### methods\n",
     "\n",
-    "Normal function categories:\n",
-    "- Static Method (doesn’t know it’s instance or class)\n",
-    "- Non-Static Method\n",
-    "- (free) functions\n",
     "\n",
-    "Python specific function categories:\n",
-    "- Instance Method (knows it’s instance)\n",
-    "- Class Method (knows it’s class)\n",
+    "- A `method` is an action which an object is able to perform.\n",
+    "- A `method` defines the behavior of a class\n",
+    "- Difference to a function: it's not independent from the class\n",
+    "\n",
+    "## categories of methods in Python\n",
+    "\n",
+    "- Instance Method (Default)\n",
+    "- Class Method (@classmethod)\n",
+    "- Static Method (@staticmethod)\n",
+    "- Abstract Method (\n",
+    "\n",
     "\n",
     "### what classes need:\n",
     "\n",
@@ -596,73 +602,6 @@
    "source": [
     "# raises NotImplementedError\n",
     "AbstractPizza().get_radius()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Alternative to get sure a method will be overwritten:\n",
-    "\n",
-    "Using `abc` module provided by Python – You get the error as soon as you'll try to instanciate the class. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import abc\n",
-    " \n",
-    "class BasePizza(object):\n",
-    "    __metaclass__ = abc.ABCMeta\n",
-    " \n",
-    "    @abc.abstractmethod\n",
-    "    def get_radius(self):\n",
-    "         \"\"\"Method that should do something.\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.BasePizza at 0x103f5a550>"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# should raise an error without function beeing called\n",
-    "\n",
-    "BasePizza()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Mixing static, class and abstract methods\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import abc\n",
-    "\n"
    ]
   },
   {
