fixed some typos

--- a/python_classes_and_methods.ipynb
+++ b/python_classes_and_methods.ipynb
@@ -14,11 +14,11 @@
     "- cls = expected by class methods (points to the class itself)\n",
     "- using self & cls is a convention, but not nessesary\n",
     "\n",
-    "### methods\n",
+    "### definition method\n",
     "\n",
     "\n",
     "- A `method` is an action which an object is able to perform.\n",
-    "- A `method` defines the behavior of a class\n",
+    "- A `method` defines the behaviour of a class\n",
     "- Difference to a function: it's not independent from the class\n",
     "\n",
     "## categories of methods in Python\n",
@@ -26,13 +26,14 @@
     "- Instance Method (Default)\n",
     "- Class Method (@classmethod)\n",
     "- Static Method (@staticmethod)\n",
-    "- Abstract Method (\n",
+    "- Abstract Method (@abstractmethod)\n",
     "\n",
     "\n",
-    "### what classes need:\n",
+    "### Demads of classes:\n",
     "\n",
-    "Because a class is a blueprint, it needs some content to work with. \n",
-    "An 'normal' instance method uses the instance of the class, \n",
+    "> Because a class is a blueprint, it needs some content to work with. \n",
+    "\n",
+    "An instance method uses the current instance of the class, \n",
     "but there are also other ways:\n",
     "@classmethods and @staticmethod doesn't require an instance. "
    ]
@@ -43,6 +44,32 @@
    "source": [
     "### try with 'software engineering' tutorial\n",
     "https://softwareengineering.stackexchange.com/questions/306092/what-are-class-methods-and-instance-methods-in-python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello from Foo\n"
+     ]
+    }
+   ],
+   "source": [
+    "# instance method\n",
+    "# >> requires instance, but no decorator (most common method type)\n",
+    "# >> can access class itself through self.__class__ attribute\n",
+    "\n",
+    "class Foo(object):\n",
+    "    def hello(self):\n",
+    "        print(\"hello from %s\" % self.__class__.__name__)\n",
+    "        \n",
+    "tom = Foo()\n",
+    "tom.hello()"
    ]
   },
   {
@@ -73,32 +100,6 @@
     "\n",
     "Foo.hello()\n",
     "Foo().hello()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello from Foo\n"
-     ]
-    }
-   ],
-   "source": [
-    "# instance method\n",
-    "# >> requires instance, but no decorator (most common method type)\n",
-    "# >> can access class itself through self.__class__ attribute\n",
-    "\n",
-    "class Foo(object):\n",
-    "    def hello(self):\n",
-    "        print(\"hello from %s\" % self.__class__.__name__)\n",
-    "        \n",
-    "tom = Foo()\n",
-    "tom.hello()"
    ]
   },
   {
