added chapter about factory method

--- a/python/python_syntax.ipynb
+++ b/python/python_syntax.ipynb
@@ -73,7 +73,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "alist = ['a', 'b', 'c']\n",
@@ -286,7 +288,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Concatenation of adjacent string literals\n",
@@ -298,7 +302,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Numbers\n",
@@ -323,7 +329,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Tuples\n",
@@ -335,7 +343,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Sets\n",
@@ -431,7 +441,9 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def derivative(f, dx):\n",
@@ -459,6 +471,60 @@
     "## Objects\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### factory method\n",
+    "\n",
+    "= Design Pattern   \n",
+    "= takes an input string and outputs an object\n",
+    "\n",
+    "means: to programm, not the programmer figures out which classes will be created"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "# tutorial https://www.youtube.com/watch?v=flOXIdWUpmU\n",
+    "\n",
+    "# create a BaseClass with 2 SubClasses (C1 and C2)\n",
+    "BaseClass = type(\"BaseClass\", (object,),{})\n",
+    "C1 = type(\"C1\",(BaseClass,), {\"x\":1})\n",
+    "C2 = type(\"C2\",(BaseClass,), {\"x\":30})\n",
+    "\n",
+    "# create a simple factory that checks \n",
+    "# if the given argument is true (return C1) of false (return C2)\n",
+    "def MyFactory(myBool):\n",
+    "    return C1() if myBool else C2()\n",
+    "\n",
+    "# pass in True for the variable m\n",
+    "m = MyFactory(True)\n",
+    "v = MyFactory(False)\n",
+    "\n",
+    "print(m.x, v.x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
