added index and corrected typos

--- a/documentation/start_with_foodsaving-backend.ipynb
+++ b/documentation/start_with_foodsaving-backend.ipynb
@@ -13,7 +13,7 @@
     "**Written in Python Django REST**\n",
     "\n",
     "- Python – object-oriented programming language  \n",
-    "- Django – Python framework (for faster web development  \n",
+    "- Django – Python framework (for faster web development)  \n",
     "         Tutorial: https://docs.djangoproject.com/en/1.11/intro/tutorial01/ \n",
     "- REST   – Framework on top of django for building Web APIs  \n",
     "         Tutorial: http://www.django-rest-framework.org/tutorial/1-serialization/"
@@ -27,48 +27,48 @@
     "\n",
     "First deside if you want to use Docker for the setup or try to install everything without it. Both options are described in the README.md in the foodsaving-backend repository. \n",
     "\n",
-    "If you want to work with docker, we would suggest to use three taps in the shell:\n",
+    "If you want to work with Docker, we would suggest to use 3 tabs in the shell:\n",
     "\n",
     "1. Tab for Communicating with git / GitHub (doing that inside the docker container might raise weird errors)  \n",
-    "2. Tab (with docker running) for run manage.py commands:"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# after starting Docker your lines in she shell start with (env)\n",
-    "\n",
-    "# running tests:\n",
-    "python manage.py test\n",
-    "\n",
-    "# after changing a model/class you have to migrate them:\n",
-    "python manage.py makemigrations\n",
-    "python manage.py migrate\n",
-    "\n",
-    "# leave docker\n",
-    "exit\n"
+    "2. Tab (with Docker running) for run manage.py commands:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " 3, Tab (with docker running) to check what your server is doing"
+    "After starting Docker your lines in the shell start with (env)\n",
+    "\n",
+    "Running tests:   \n",
+    "> python manage.py test\n",
+    "\n",
+    "After changing a model/class you have to migrate them:   \n",
+    "> python manage.py makemigrations   \n",
+    "> python manage.py migrate\n",
+    "\n",
+    "Leave Docker   \n",
+    "> exit\n"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# find our the name of your docker container\n",
-    "docker ps\n",
+    " 3, Tab (with Docker running) to check what your server is doing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Find out the name of your Docker container   \n",
+    "> docker ps\n",
     "\n",
-    "# execute your running container in a second window\n",
-    "docker exec -it <container_name> bash\n",
+    "Execute your running container in a second window   \n",
+    "> docker exec -it <container_name> bash\n",
     "\n",
-    "# show the last 12 lines of the server output\n",
-    "docker logs -f <container_name> --tail \"12\"\n"
+    "Show the last 12 lines of the server output with email address for Swagger\n",
+    "> docker logs -f <container_name> --tail \"12\"\n"
    ]
   },
   {
@@ -79,13 +79,15 @@
     "\n",
     "**Why do you need the server output?**\n",
     "\n",
-    "On the one hand it's good to notice when it's not running anymore to avoid errors, on the other hand it shows you some sample data. In particular a mail address and the password 123. Use this to login in swagger:\n",
+    "On the one hand it's good to notice when it's not running anymore to avoid errors, on the other hand it shows you some sample data. In particular a mail address and the password 123. Use this to login in to Swagger:\n",
     "\n",
     "http://127.0.0.1:8000/docs/\n",
     "\n",
     "**Why Swagger?**\n",
     "\n",
-    "Swagger shows you the API endpoints you generate "
+    "Swagger shows you the API endpoints you generate ...\n",
+    "\n",
+    "Response-request-cycle"
    ]
   },
   {
@@ -94,6 +96,35 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "02 Project Architecture   \n",
+    "03 API endpoints  \n",
+    "04 Test Data  \n",
+    "_041 Generate Test Data in the tests itself  \n",
+    "_042 Generate Test Data with Factories  \n",
+    "_043 Generate Test Data create_sample-data.py  \n",
+    "05 How to write a test  \n",
+    "06 How decorators are used  \n",
+    "07 Validators and Permissions  \n",
+    "08 Users, Members and Collectors  \n",
+    "09 History \n",
+    "10? Signals\n",
+    "11? Filtering\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "another idea:\n",
+    "Video about hot to populate a database in django shell and display it in swagger /// maybe vs. navigate direcly through tables\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
