--- a/python/python_syntax_2.ipynb
+++ b/python/python_syntax_2.ipynb
@@ -573,6 +573,206 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('name', 'derek'), ('drinks', 'mate'), ('role', 'coach')]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# string formating????\n",
+    "\n",
+    "\n",
+    "[('name', 'derek'), ('drinks', 'mate'), ('role', 'coach')]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "derek_tuples = [('name', 'derek'), ('drinks', 'mate'), ('role', 'coach')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name: derek\n",
+      "drinks: mate\n",
+      "role: coach\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x, y in derek_tuples:\n",
+    "    print(x + ': ' + y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'drinks': 'mate', 'name': 'derek', 'role': 'coach'}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# change the type to dictionary\n",
+    "dict(derek_tuples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('name', 'derek'), ('drinks', 'mate'), ('role', 'coach')]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(derek_tuples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# list comprahension\n",
+    "\n",
+    "[x % 3 for x in range(20)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0, 1, 2}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# tuble comprahension\n",
+    "\n",
+    "{x % 3 for x in range(100)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'drinks': 'mate', 'name': 'derek', 'role': 'coach'}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# dictionary comprahension\n",
+    "\n",
+    "{k: v for k,v in derek_tuples}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 0,\n",
+       " 1: 1,\n",
+       " 2: 2,\n",
+       " 3: 0,\n",
+       " 4: 1,\n",
+       " 5: 2,\n",
+       " 6: 0,\n",
+       " 7: 1,\n",
+       " 8: 2,\n",
+       " 9: 0,\n",
+       " 10: 1,\n",
+       " 11: 2,\n",
+       " 12: 0,\n",
+       " 13: 1,\n",
+       " 14: 2,\n",
+       " 15: 0,\n",
+       " 16: 1,\n",
+       " 17: 2,\n",
+       " 18: 0,\n",
+       " 19: 1}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{k: k%3 for k in range(20)}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
